# snapflakes_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.zh.md
.devcontainer/av_codec_ffmpeg7.1.3/: build.dockerfile  build.sh  devcontainer.json  setup.sh  start_for_test.sh
.devcontainer/llvm21-cuda12.9/: build_image.sh  dev.dockerfile  devcontainer.json
cmake/: ffmpeg.cmake  snapflakesConfig.cmake.in
include/snapflakes/: log.hpp  stdplus.hpp
include/snapflakes/log/: base.hpp  console.hpp  file.hpp  logger.hpp
include/snapflakes/log/impl/: concepts.hpp  spdlog_base.hpp  spdlog_console.hpp  spdlog_file.hpp
include/snapflakes/stdplus/: execution.hpp  streamifex.hpp
include/snapflakes/stdplus/exec/: concepts.hpp  reorder.hpp  static_thread_pool.hpp  std.hpp  then_rsh.hpp  trampoline_scheduler.hpp  utils.hpp
include/snapflakes/stdplus/exec/utils/: basic_completions.hpp  concepts.hpp  stdexec_fwd.hpp
include/snapflakes/stdplus/streamifex/: broadcast.hpp  concepts.hpp  prefetch.hpp  stream_closure.hpp  stream_fwd.hpp  streamify.hpp  transform.hpp  type_traits.hpp
include/snapflakes/stdplus/utilities/: atomic.hpp  cache_buffer.hpp  concepts.hpp  functional.hpp  guard.hpp  initialization.hpp  list.hpp  mutex.hpp  type_traits.hpp
src/log/: CMakeLists.txt
src/stdplus/: CMakeLists.txt
tests/: CMakeLists.txt  common.hpp  test_log.cpp  test_stdplus_exec.cpp  test_stdplus_streamifex_broadcast.cpp
