add_library(snapflakes_stdplus INTERFACE)
add_library(snapflakes::stdplus ALIAS snapflakes_stdplus)
set_target_properties(snapflakes_stdplus
    PROPERTIES 
        EXPORT_NAME "stdplus"
)

target_include_directories(snapflakes_stdplus INTERFACE
    $<BUILD_INTERFACE:${SNAPFLAKES_PROJECT_INCLUDE_DIR}>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(snapflakes_stdplus INTERFACE STDEXEC::stdexec)

list(APPEND SNAPFLAKES_EXPORT_TARGETS snapflakes_stdplus)
set(SNAPFLAKES_EXPORT_TARGETS "${SNAPFLAKES_EXPORT_TARGETS}" PARENT_SCOPE)

list(APPEND SNAPFLAKES_ENABLED_COMPONENTS snapflakes::stdplus)
set(SNAPFLAKES_ENABLED_COMPONENTS "${SNAPFLAKES_ENABLED_COMPONENTS}" PARENT_SCOPE)
list(APPEND SNAPFLAKES_COMPONENT_INSTALL_SRC_DIRS ${SNAPFLAKES_PROJECT_INCLUDE_DIR}/stdplus)
set(SNAPFLAKES_COMPONENT_INSTALL_SRC_DIRS "${SNAPFLAKES_COMPONENT_INSTALL_SRC_DIRS}" PARENT_SCOPE)
list(APPEND SNAPFLAKES_COMPONENT_INSTALL_PREFIXES "stdplus")
set(SNAPFLAKES_COMPONENT_INSTALL_PREFIXES "${SNAPFLAKES_COMPONENT_INSTALL_PREFIXES}" PARENT_SCOPE)